# Unity_RustGpu_Sample

./: ReadMe.md
Assets/: HLSL.symlink  SampleMaterial.mat  SampleShader.shader  WhatIWant.shader
Assets/Scenes/: SampleScene.unity
ProjectSettings/: ProjectSettings.asset
shader/: Cargo.toml  build.rs
shader/.cargo/: config
shader/shader_src/: Cargo.toml
shader/shader_src/src/: lib.rs
shader/src/: lib.rs  main.rs
